<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/question_disability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_disability"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/black"/>

        <RadioGroup
            android:id="@+id/disability_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/question_disability"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:checkedButton="@id/visually_impaired"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin">

            <CheckBox
                android:id="@+id/visually_impaired"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/visually_impaired"/>

            <CheckBox
                android:id="@+id/hearing_impaired"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/hearing_impaired"/>

            <CheckBox
                android:id="@+id/physical_handicap"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/physical_handicap"/>

            <CheckBox
                android:id="@+id/cerebral_palsy"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/cerebral_palsy"/>

        </RadioGroup>

        <Button
            android:id="@+id/form_back_button"
            android:layout_width="@dimen/form_button_width"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/disability_options"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/previous"
            android:layout_marginTop="32dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:backgroundTint="@color/black"/>

        <Button
            android:id="@+id/form_next_button"
            android:layout_width="@dimen/form_button_width"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/disability_options"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/next"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:backgroundTint="@color/black"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>