<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/question_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_dob"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <Button
            android:id="@+id/date_picker"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/question_age"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="?android:spinnerStyle"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:onClick="openDatePicker"/>

        <Button
            android:id="@+id/form_back_button"
            android:layout_width="@dimen/form_button_width"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/date_picker"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/previous"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:backgroundTint="@color/black"/>

        <Button
            android:id="@+id/form_next_button"
            android:layout_width="@dimen/form_button_width"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/date_picker"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/next"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:backgroundTint="@color/black"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>